--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,3 +33,7 @@ jobs:
         git add reviews.json
         git commit -m "update: refresh Yandex reviews" || echo "No changes to commit"
         git push
+- name: Install Playwright
+  run: |
+    pip install -r requirements.txt
+    playwright install
